--- a/references.html
+++ b/references.html
@@ -19,7 +19,6 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <link rel="stylesheet"
@@ -95,6 +94,7 @@ button.code-folding-btn:focus {
 }
 </style>
 
+
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
@@ -151,7 +151,7 @@ $(document).ready(function () {
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
-<script src="site_libs/navigation-1.0/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/tabsets.js"></script>
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
@@ -268,8 +268,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="some-useful-sites" class="section level2">
-<h2>Some useful sites</h2>
+<div id="some-useful-sites-from-which-i-shamelessly-stole-material-for-the-course" class="section level2">
+<h2>Some useful sites (from which I shamelessly stole material for the course)</h2>
 <ul>
 <li><a href="http://adv-r.had.co.nz/">Advanced R</a> by Hadley Wickham</li>
 <li><a href="https://www.rstudio.com/resources/cheatsheets/">RStudio Cheatsheets</a></li>
@@ -302,6 +302,7 @@ $(document).ready(function () {
 $(document).ready(function () {
   $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
 });
+
 
 </script>
 
